<resources>
    <string name="app_name">PennyWise</string>
    <string name="splash_name">PennyWise</string>
    <string name="splash_desc">Your Futuristic Finance App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="viewCard1">View Card</string>
    <string name="createBtn">Add New Card</string>
    <string name="currency1">Currency</string>
    <string name="addCard">Add Card</string>
    <string name="expiryDate">Expiry Date</string>
    <string name="CSV">CSV</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardName">Name On Card</string>
    <string name="billingAddr">Billing Address</string>
    <string name="submit">Submit</string>
    <string name="limit_startdate">##,##,####</string>
    <string name="limit_enddate">##,##,####</string>
    <string name="limit_spendlimit">Spend Limit</string>
    <string name="limit_spend">Spend</string>
    <string name="invalid_banknumber">Please Enter Valid Number</string>
    <string name="invalid_CSV">Enter Valid Number</string>
    <string name="invalid_expiryDate">Enter Valid Expiry Date</string>
    <string name="invalid_Address">Enter valid Billing Address</string>
    <string name="invalid_Name">Enter Valid Name</string>
    <string name="card_info">Card Info: </string>
    <string name="exp_Title">Exp Date: </string>
    <string name="csv_Title">CSV: </string>
    <string name="num_Title">Card NO. :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>